k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opentable
  labels:
    name: opentable
    environment: production
